# TakeApart

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: PBD.md  PRD.md  Requirements.md  SPEC.md  Workflow.md
src/takeapart/: __init__.py  server.py
src/takeapart/models/: __init__.py  sam_model.py
src/takeapart/tools/: __init__.py  detect.py  segment.py
src/takeapart/utils/: __init__.py  edge_refine.py  image_io.py  mask_ops.py
