[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "takeapart"
version = "0.1.0"
description = "AI 视觉拆解工具 - MCP Server，让 AI 拥有 PS 级别的眼睛和手"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "opencv-python>=4.9.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
takeapart = "takeapart.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/takeapart"]

[tool.ruff]
line-length = 100
target-version = "py310"
